# pdg2

./: CMakeLists.txt  README.md  flake.nix
validator/: .gitignore  Cargo.toml  README.md  coalesce_pts.py  files.txt  load_pdg_csv.py  out.txt  run.sh  todo.txt
validator/src/: accounting.rs  bag.rs  counts.rs  gen_report.rs  id.rs  indexed_set.rs  llvm.rs  main.rs  pdg.rs  report.rs  validator.rs
validator/src/alias/: basic.rs  mod.rs  svf.rs  util.rs
validator/src/validator/: edge.rs  node.rs  util.rs
validator/test/thrfp/: alias_sets.txt  ir_counts.csv  ir_subtotals.csv  pdg_instance.mzn  pdg_subtotals.csv  pts.txt  reconcile_ir_pdg.csv  thrfp.bc  thrfp.c  validation_diff.md
validator/test/thrfp-2023-01-05/: counts.csv  pdg_data.csv  validation.csv
validator/test/thrfp-2023-01-13/: counts.csv  node2lineNumber.txt
validator/test/thrfp-2023-03-14/: validation.csv
validator/test/thrfp-2023-05-02/: alias_sets.out  alias_sets.txt  basicaa.out  ir_subtotals.csv  pdg_counts.csv  pdg_diff.md  pts.txt  thrfp.ll
validator/test/websrv/: pts.txt  (+5 more)
validator/test/websrv-2022-12-14/: enclave_instance.mzn  ir.csv  validation.csv  versions.txt
validator/test/websrv-2022-12-19/: counts.csv  validation.csv  versions.txt
validator/test/websrv-2022-12-19-2/: counts.csv  validation.csv  versions.txt
validator/test/websrv-2022-12-19-3/: counts.csv  validation.csv  versions.txt
validator/test/websrv-2022-12-19-4/: counts.csv  validation.csv
validator/test/websrv-2022-12-20/: counts.csv  validation.csv
validator/test/websrv-2022-12-21/: counts.csv  validation.csv
(+112 files in other folders)
