[package]
name = "pdg-validator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-ir = { version = "0.8.2", features = ["llvm-10"] }
serde = { version = "1", features = ["derive"] }
csv = "1.1"
regex = "1"
petgraph = "0.6"